feat: Swagger com as rotas do serviço e as da plataforma consumidas
